[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/LogView.gd" type="Script" id=1]
[ext_resource path="res://assets/game.theme" type="Theme" id=2]

[node name="LogView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="History" type="TextEdit" parent="."]
visible = false
margin_top = 313.47
margin_right = 600.0
margin_bottom = 563.47
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="Button" parent="PanelContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 24.0
theme = ExtResource( 2 )
toggle_mode = true
text = "â†‘"

[node name="LatestMessageLabel" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 24.0
margin_top = 5.0
margin_right = 764.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Log ready."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 768.0
margin_right = 786.0
margin_bottom = 24.0
text = "?"
[connection signal="toggled" from="PanelContainer/HBoxContainer/ExpandButton" to="." method="_on_ExpandButton_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
